--- a/css/style.css
+++ b/css/style.css
@@ -19,16 +19,16 @@ body {
   font-family: var(--font-arabic);
   background-color: var(--light-color);
   color: var(--dark-color);
-  line-height: 1.6; /* مسافة مريحة بين الأسطر */
+  line-height: 1.6; 
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: var(--font-english); /* للإنجليزي لو فيه */
-  margin-bottom: 0.5em; /* مسافة صغيرة تحت العناوين */
+  font-family: var(--font-english); 
+  margin-bottom: 0.5em; 
 }
 
 p {
-  margin-bottom: 1em; /* مسافة بين الفقرات */
+  margin-bottom: 1em; 
 }
 
 ul, ol {
@@ -37,8 +37,8 @@ ul, ol {
 }
 
 a {
-  text-decoration: none; /* إزالة الخط من اللينكات */
-  color: inherit; /* يخلي اللون حسب مكانه */
+  text-decoration: none; 
+  color: inherit; 
 }
 
 img {
@@ -48,7 +48,6 @@ img {
 }
 
 /* navbar start */
-/* اللوجو النصي (في حالة استخدام كلمة بدل الصورة) */
 
 .navbar{
     box-shadow: #2b2b2b5a 0px 4px 6px ;
@@ -156,6 +155,7 @@ img {
   font-weight: 600;
   padding: 0.6rem 1.5rem;
   transition: all 0.3s ease;
+  cursor: pointer;
 }
 
 .custom-btn:hover {
